--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3.8'
+
 services:
   mysql:
+    user: root
     image: mysql:8.0
     container_name: kurupun-mysql
     restart: always
@@ -12,10 +14,12 @@ services:
     ports:
       - "3306:3306"
     volumes:
+      # ใช้ path แบบ relative จะปลอดภัยกว่า Windows absolute path
       - ./pasadu2025.sql:/docker-entrypoint-initdb.d/pasadu2025.sql
     command: --default-authentication-plugin=mysql_native_password
 
   phpmyadmin:
+    user: root
     image: phpmyadmin/phpmyadmin
     container_name: kurupun-phpmyadmin
     restart: always
@@ -27,6 +31,3 @@ services:
       - "8080:80"
     depends_on:
       - mysql
-
-volumes:
-  pgdata:
