edit connection string mongodb

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URL=mongodb://localhost:27017
+MONGO_URL=mongodb+srv://admin:1234@kurupun-db.0p4gl0y.mongodb.net/
 SECRET_KEY=1BCYOUQH90wxpEHxbCcH6PRH8bmBZ7TP
